--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -339,6 +339,7 @@
 
 @book{gendreauHandbookMetaheuristics2019,
 	title = {Handbook of {{Metaheuristics}}},
+	author = {Gendreau, Michel and Potvin, Jean-Yves},
 	editor = {Gendreau, Michel and Potvin, Jean-Yves},
 	year = {2019},
 	series = {International {{Series}} in {{Operations Research}} \& {{
@@ -355,6 +356,7 @@
 }
 @incollection{gendreauHandbookMetaheuristics2019lnschapter,
 	title = {Handbook of {{Metaheuristics}}},
+	author = {Pisinger, David and Ropke, Stefan},
 	editor = {Gendreau, Michel and Potvin, Jean-Yves},
 	year = {2019},
 	series = {International {{Series}} in {{Operations Research}} \& {{
